sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var ok:boolean = false
  var n:getNombreValeurs()-2
  while (!ok){
    ok=true
    for (i<- 1 tp getNombreValeur()-1){
      if (plusPetit(i,i+1)){
        echange(i,i+1)
        ok = false
      }
    }
  }
}